[tool.poetry]
name = "scraper-method-comparison"
version = "0.1.0"
description = "A comparison of scraping methods."
authors = ["erinhmclark <erinhannahmary.clark@gmail.com>"]
readme = "README.md"
packages = [{include = "scraper_method_comparison"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
